# **********************************************************
#      2023 : Arthur JEULIN
#      DataStructure : 
#      Created by Arthur JEULIN on 12/12/2023.
# **********************************************************

cmake_minimum_required(VERSION 3.27.5)

#add_subdirectory(linked-lists)
add_subdirectory(search-sort)
add_subdirectory(tree)
